# skillPilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
skillPilot/: __init__.py  agent.py  cli.py  llm.py  models.py  progress.py  skills.py  tools.py
tests/: test_quality.py  test_skills.py  test_tools.py
