[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-agent"
version = "0.1.0"
description = "A small Copilot-CLI-like coding agent with local skill lifecycle management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
skill-agent = "skillPilot.cli:main"

[tool.setuptools.packages.find]
include = ["skillPilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
